--- a/TipCalculator/Base.lproj/Main.storyboard
+++ b/TipCalculator/Base.lproj/Main.storyboard
@@ -36,43 +36,55 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DLk-7q-od8">
-                                <rect key="frame" x="142" y="153" width="90" height="30"/>
+                                <rect key="frame" x="142.5" y="201" width="90" height="30"/>
                                 <state key="normal" title="Calculate Tip"/>
                                 <connections>
                                     <action selector="calculateTip:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1Uf-4b-1XA"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You should tip:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F1o-Qj-nNT">
-                                <rect key="frame" x="122" y="219" width="132.5" height="24"/>
+                                <rect key="frame" x="121" y="277" width="132.5" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2nG-bp-Ezd">
-                                <rect key="frame" x="151" y="255" width="74.5" height="33.5"/>
+                                <rect key="frame" x="150" y="316.5" width="74.5" height="33.5"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" none="YES"/>
+                                </accessibility>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a tip % (default 15%)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="roi-Fq-hjY">
+                                <rect key="frame" x="93" y="152.5" width="189.5" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="2nG-bp-Ezd" firstAttribute="top" secondItem="F1o-Qj-nNT" secondAttribute="bottom" multiplier="1.05" id="0sm-7g-miF"/>
+                            <constraint firstItem="roi-Fq-hjY" firstAttribute="top" secondItem="8kb-MI-iMr" secondAttribute="bottom" multiplier="1.1" id="5tU-az-EV5"/>
                             <constraint firstItem="F1o-Qj-nNT" firstAttribute="top" secondItem="DLk-7q-od8" secondAttribute="bottom" multiplier="1.2" id="6l7-Kk-oMA"/>
                             <constraint firstItem="2nG-bp-Ezd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6nL-S6-2yf"/>
                             <constraint firstItem="F1o-Qj-nNT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HQA-c3-IwT"/>
-                            <constraint firstItem="DLk-7q-od8" firstAttribute="top" secondItem="8kb-MI-iMr" secondAttribute="bottom" multiplier="1.1" id="Ktr-IC-lL9"/>
                             <constraint firstItem="8kb-MI-iMr" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.6" id="RrQ-QH-vC8"/>
                             <constraint firstItem="XC6-qn-h6B" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="Sxa-YI-9u9"/>
                             <constraint firstItem="8kb-MI-iMr" firstAttribute="top" secondItem="XC6-qn-h6B" secondAttribute="bottom" constant="30" id="UAX-8p-P8B"/>
+                            <constraint firstItem="roi-Fq-hjY" firstAttribute="centerX" secondItem="8kb-MI-iMr" secondAttribute="centerX" id="UEO-PW-DUS"/>
                             <constraint firstItem="DLk-7q-od8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eZ0-js-Wq8"/>
                             <constraint firstAttribute="leadingMargin" secondItem="XC6-qn-h6B" secondAttribute="leading" constant="-5" id="frc-RE-qYz"/>
                             <constraint firstItem="8kb-MI-iMr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fwX-mk-F0b"/>
+                            <constraint firstItem="DLk-7q-od8" firstAttribute="top" secondItem="roi-Fq-hjY" secondAttribute="bottom" multiplier="1.1" id="j4r-zj-w1U"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="billAmountField" destination="8kb-MI-iMr" id="QZV-Mt-dan"/>
-                        <outlet property="tipDisplay" destination="2nG-bp-Ezd" id="fL0-1U-vog"/>
+                        <outlet property="tipAmountLabel" destination="2nG-bp-Ezd" id="Qlr-si-1Qh"/>
+                        <outlet property="tipField" destination="roi-Fq-hjY" id="ebt-gH-71j"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
