--- a/TipCalculator/Base.lproj/Main.storyboard
+++ b/TipCalculator/Base.lproj/Main.storyboard
@@ -23,83 +23,107 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter bill amount here..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8kb-MI-iMr">
-                                <rect key="frame" x="75" y="108.5" width="225" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tip Calculator" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XC6-qn-h6B">
                                 <rect key="frame" x="21" y="40" width="220" height="38.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="32"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DLk-7q-od8">
-                                <rect key="frame" x="139.5" y="200" width="95" height="32"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <state key="normal" title="Calculate Tip"/>
-                                <connections>
-                                    <action selector="calculateTip:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1Uf-4b-1XA"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You should tip:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F1o-Qj-nNT">
-                                <rect key="frame" x="121" y="278.5" width="132.5" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2nG-bp-Ezd">
-                                <rect key="frame" x="150" y="318" width="74.5" height="33.5"/>
-                                <accessibility key="accessibilityConfiguration">
-                                    <accessibilityTraits key="traits" none="YES"/>
-                                </accessibility>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="28"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="15" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="qFQ-EJ-HA4">
-                                <rect key="frame" x="73" y="152" width="173" height="31"/>
-                                <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="sliderValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="4GN-oq-eP1"/>
-                                </connections>
-                            </slider>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15%" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAC-3s-ifJ">
-                                <rect key="frame" x="268" y="157" width="32" height="21"/>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7po-ij-7fP">
+                                <rect key="frame" x="0.0" y="87" width="375" height="570"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8QK-Xe-52x" userLabel="Content View">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="570"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2nG-bp-Ezd">
+                                                <rect key="frame" x="150" y="269" width="74.5" height="33.5"/>
+                                                <accessibility key="accessibilityConfiguration">
+                                                    <accessibilityTraits key="traits" none="YES"/>
+                                                </accessibility>
+                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="28"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15%" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAC-3s-ifJ">
+                                                <rect key="frame" x="295.5" y="337.5" width="32" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You should tip:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F1o-Qj-nNT">
+                                                <rect key="frame" x="121" y="225" width="132.5" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter bill amount here..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8kb-MI-iMr">
+                                                <rect key="frame" x="46.5" y="400" width="281" height="30"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="numbersAndPunctuation" returnKeyType="done"/>
+                                            </textField>
+                                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="15" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="qFQ-EJ-HA4">
+                                                <rect key="frame" x="44.5" y="333" width="201" height="31"/>
+                                                <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <connections>
+                                                    <action selector="sliderValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="4GN-oq-eP1"/>
+                                                </connections>
+                                            </slider>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="2nG-bp-Ezd" firstAttribute="top" secondItem="F1o-Qj-nNT" secondAttribute="bottom" constant="20" id="61P-XA-Oft"/>
+                                            <constraint firstItem="F1o-Qj-nNT" firstAttribute="centerX" secondItem="8QK-Xe-52x" secondAttribute="centerX" id="ChN-7Y-BbI"/>
+                                            <constraint firstItem="cAC-3s-ifJ" firstAttribute="centerY" secondItem="qFQ-EJ-HA4" secondAttribute="centerY" id="DD3-fm-92b"/>
+                                            <constraint firstItem="qFQ-EJ-HA4" firstAttribute="width" secondItem="8kb-MI-iMr" secondAttribute="width" multiplier="0.7" id="G9S-V1-RnS"/>
+                                            <constraint firstItem="8kb-MI-iMr" firstAttribute="leading" secondItem="qFQ-EJ-HA4" secondAttribute="leading" id="H8W-Ma-SFR"/>
+                                            <constraint firstItem="8kb-MI-iMr" firstAttribute="centerX" secondItem="8QK-Xe-52x" secondAttribute="centerX" id="J2T-ro-yxl"/>
+                                            <constraint firstItem="2nG-bp-Ezd" firstAttribute="centerX" secondItem="8QK-Xe-52x" secondAttribute="centerX" id="JQo-vV-vQB"/>
+                                            <constraint firstItem="8kb-MI-iMr" firstAttribute="top" secondItem="qFQ-EJ-HA4" secondAttribute="bottom" multiplier="1.1" id="Jz7-ip-5a5"/>
+                                            <constraint firstItem="qFQ-EJ-HA4" firstAttribute="top" secondItem="2nG-bp-Ezd" secondAttribute="bottom" multiplier="1.1" id="Rlo-bo-6xO"/>
+                                            <constraint firstItem="2nG-bp-Ezd" firstAttribute="centerY" secondItem="8QK-Xe-52x" secondAttribute="centerY" id="ec4-XU-7da"/>
+                                            <constraint firstItem="cAC-3s-ifJ" firstAttribute="trailing" secondItem="8kb-MI-iMr" secondAttribute="trailing" id="lJn-T4-20D"/>
+                                            <constraint firstItem="8kb-MI-iMr" firstAttribute="width" secondItem="8QK-Xe-52x" secondAttribute="width" multiplier="0.75" id="mS1-Ud-k4U"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="8QK-Xe-52x" firstAttribute="leading" secondItem="7po-ij-7fP" secondAttribute="leading" id="2MB-bm-yCQ"/>
+                                    <constraint firstItem="8QK-Xe-52x" firstAttribute="width" secondItem="7po-ij-7fP" secondAttribute="width" id="2oo-aZ-4RN"/>
+                                    <constraint firstAttribute="bottom" secondItem="8QK-Xe-52x" secondAttribute="bottom" id="DmS-dw-1Ly"/>
+                                    <constraint firstItem="8QK-Xe-52x" firstAttribute="height" secondItem="7po-ij-7fP" secondAttribute="height" id="JD5-aX-Et1"/>
+                                    <constraint firstAttribute="trailing" secondItem="8QK-Xe-52x" secondAttribute="trailing" id="cST-A0-pFD"/>
+                                    <constraint firstItem="8QK-Xe-52x" firstAttribute="top" secondItem="7po-ij-7fP" secondAttribute="top" id="k5a-7r-8aQ"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="cAC-3s-ifJ" firstAttribute="trailing" secondItem="8kb-MI-iMr" secondAttribute="trailing" id="0Bh-pc-Exv"/>
-                            <constraint firstItem="2nG-bp-Ezd" firstAttribute="top" secondItem="F1o-Qj-nNT" secondAttribute="bottom" multiplier="1.05" id="0sm-7g-miF"/>
-                            <constraint firstItem="F1o-Qj-nNT" firstAttribute="top" secondItem="DLk-7q-od8" secondAttribute="bottom" multiplier="1.2" id="6l7-Kk-oMA"/>
-                            <constraint firstItem="2nG-bp-Ezd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6nL-S6-2yf"/>
-                            <constraint firstItem="F1o-Qj-nNT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HQA-c3-IwT"/>
-                            <constraint firstItem="8kb-MI-iMr" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.6" id="RrQ-QH-vC8"/>
+                            <constraint firstItem="7po-ij-7fP" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="6n6-3f-7Yv"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7po-ij-7fP" secondAttribute="bottom" constant="10" id="9XK-ao-gTa"/>
+                            <constraint firstItem="7po-ij-7fP" firstAttribute="top" secondItem="XC6-qn-h6B" secondAttribute="bottom" multiplier="1.1" id="HNg-zn-L5P"/>
                             <constraint firstItem="XC6-qn-h6B" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="Sxa-YI-9u9"/>
-                            <constraint firstItem="8kb-MI-iMr" firstAttribute="top" secondItem="XC6-qn-h6B" secondAttribute="bottom" constant="30" id="UAX-8p-P8B"/>
-                            <constraint firstItem="qFQ-EJ-HA4" firstAttribute="width" secondItem="8kb-MI-iMr" secondAttribute="width" multiplier="0.75" id="XcN-Mb-ysL"/>
-                            <constraint firstItem="qFQ-EJ-HA4" firstAttribute="top" secondItem="8kb-MI-iMr" secondAttribute="bottom" multiplier="1.1" id="doX-Jt-sbD"/>
-                            <constraint firstItem="DLk-7q-od8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eZ0-js-Wq8"/>
                             <constraint firstAttribute="leadingMargin" secondItem="XC6-qn-h6B" secondAttribute="leading" constant="-5" id="frc-RE-qYz"/>
-                            <constraint firstItem="8kb-MI-iMr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fwX-mk-F0b"/>
-                            <constraint firstItem="DLk-7q-od8" firstAttribute="top" secondItem="qFQ-EJ-HA4" secondAttribute="bottom" multiplier="1.1" id="gDO-W2-FOd"/>
-                            <constraint firstItem="qFQ-EJ-HA4" firstAttribute="leading" secondItem="8kb-MI-iMr" secondAttribute="leading" id="kKI-dp-xIL"/>
-                            <constraint firstItem="cAC-3s-ifJ" firstAttribute="centerY" secondItem="qFQ-EJ-HA4" secondAttribute="centerY" id="mkf-Tu-eRL"/>
+                            <constraint firstItem="7po-ij-7fP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kvr-SJ-gBM"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="qK4-Q1-u6M" appends="YES" id="Mxg-sj-QSV"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="billAmountField" destination="8kb-MI-iMr" id="QZV-Mt-dan"/>
+                        <outlet property="scrollView" destination="7po-ij-7fP" id="xOT-2t-uWa"/>
                         <outlet property="tipAmountLabel" destination="2nG-bp-Ezd" id="Qlr-si-1Qh"/>
                         <outlet property="tipPercentDisplay" destination="cAC-3s-ifJ" id="LIj-xx-Qpx"/>
                         <outlet property="tipSlider" destination="qFQ-EJ-HA4" id="T2s-rc-a2X"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="qK4-Q1-u6M">
+                    <connections>
+                        <action selector="tapHandler:" destination="BYZ-38-t0r" id="wxV-d3-I8e"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
